# f1_dashboard

./: CMakeLists.txt  README.md
src/: dashboard.cpp  dashboard.h  database.cpp  database.h  fetcher.cpp  fetcher.h  main.cpp  models.h  parser.cpp  parser.h
